<resources>
    <string name="app_name">Explore_Maharashtra</string>
    <string name="first_slide_title">Search Your location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="fifth_slide_title">------------------------------------------------</string>
    <string name="first_slide_desc">You can Search any place nearby or within Maharashtra. We will display specific or all search related result.</string>
    <string name="second_slide_desc">We provide  almost all thr numbers of all department and shop registerd with us. You can make call with those department</string>
    <string name="third_slide_desc">If you have a shop or something and want to be a part of our growing industry then add your place by your Own.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you do not have to worry.</string>
    <string name="chatur">Chattushringi Temple</string>
    <string name="jejuri">Jejuri Temple</string>
    <string name="moreshwar">Moreshwar Temple</string>
    <string name="hist">History</string>
    <string name="dist">Distance</string>
    <string name="reach">How to reach?</string>
    <string name="time">Opening Time</string>
    <string name="Spec">Speciality</string>
    <string name="sinh_hist">The Sinhagad Fort was initially known as Kondhana after the sage Kaundinya. The Kaundinyeshwar temple coupled with the caves and carvings indicates that the fort had probably been built around two thousand years ago. It was seized by Muhammad bin Tughlaq from the Koli king Nag Naik in 1328 AD. Shahaji Bhosale, as the commander of Ibrahim Adil Shah II, was entrusted with the control of the Pune region. His son Shivaji, refused to accept the Adilshahi and initiated the task of setting up Swarajya. Shivaji gained control of Kondana in 1647 by convincing Siddi Amber, the Adilshahi Sardar who controlled the fort, that he, the son of Shahaji Bhosale, could manage the forts defences optimally.</string>
    <string name="shiv_hist">The present day Junnar was known as Jirna-nagar, Junner and existed prior to beginning of year AD. Junnar was capital of King Nahapan from Shak dynasty. The Satvahan king Satkarni, a son of Gautami, wiped out Shakas and held dominance over Junnar and its surrounding area. excavated many caves. After Satvahan, Shivneri fort came under the control of Chalukya of Rashtrakut Empire. Yadavas established their rule between 1170 to 1308. During this tenure Shivneri was built as a fort. In 1443 Malik Ul Tujar defeated Yadavas and conquered the fort. Thus the fort came under the control of Bahamani Empire.</string>
    <string name="tik_hist">Not much is known about who build this fort. A vihara can be found on the fort which estimates the fort to be in existence since the 7 or 8th century A.D.In 1585, Malik Ahmad Nizam Shah I conquered the fort and annexed it to the Nizam territory. Chatrapati Shivaji Maharaj won over the forts of Lohagad, Karnala, Mahuli, Songad, Visapur and Tala in 1657. He successfully conquered the Nizam territory of Konkan and bought it under his rule.</string>
    <string name="tung_hist">Tung Fort was built before 1600 CE. It was built by the Adil Shahi dynasty but was captured by Shivaji. It is a small fort, and able to hold not more than 200 troops at a time. As such, it would not have been able to defend itself on its own for a long time. Its shape and structure suggest that its main function was as a watchtower overlooking Maval region of the Pawana and Mulshi valleys guarding the road to Pune city. The Dhamale family, one of the Deshmukh from the Maval region, was charged with ensuring the security of Tung Fort. During invasion, it served to provide a temporary distraction for invaders. Thus, the major forts of Visapur and Lohagad would have time to prepare themselves to meet the invading army.</string>
    <string name="roh_hist">Rohida or Vichitragad is a fort situated in Rohid maval which is in Bhor region of Pune districtRohida was built by the Yadavas. In  1656, this fort was captured by  Shivaji Maharaj. In 1666, the Moghuls conquered the fort but could not hold it for long.Again on June 24, 1670, Shivaji Maharaj recaptured the fort.This fort is situated in the southern part of Pune. The place where Rohida is situated is a stratergically important as this region of Pune is near by  Satara and also well connected with Kokan  by many ghat routes</string>
    <string name="raj_hist">Shivaji seized the fort in 1656, then known as the fort of Rairi from Chandraraoji More, the king of Jawali. Shivaji renovated and expanded the fort of Rairi and renamed it as Raigad (Kings Fort). It became the capital of Shivajis Maratha kingdom.The villages of Pachad  Raigadwadi are located at the base of the Raigad fort. These two villages were considered very important during the Maratha rule in Raigad. The actual climb to the top of the Raigad fort starts from Pachad. During Shivajis rule, A cavalry of 10,000 was always kept on standby in Pachad village. Shivaji also built another fort Lingana around 2 miles away from Raigad. The Lingana fort was used to keep prisoners</string>
    <string name="ghan_hist">A 300 years old structure situated near Tamhini Ghat and Mulshi, it is said that Ghangad Fort used to be a prison under the kingdom of Peshwas. And apparently, it was also the watchtower for the city of Pune. Unfortunately, there is not much historical evidence supporting this fact. However, what the fort is sure to offer is the views for the lush green region from the very top. Ghangad fort is a popular trekking destination amongst residents of Pune, Mumbai, and Nagpur. The trek is a medium to easy level trek which on average takes about an hour to reach the midpoint of the fort</string>
    <string name="kot_hist">The cave and the temple carvings date back to the 13th century. Not much is known about the history until the 18th century. In 1684 Aurangjeb sent Abdul Kadir and AlaiBiradkar to capture this fort. After a small skirmish, the fort was captured by Abdul Kadir. Aurangjeb honored Abdul Kadir and renamed this fort as Miftah-ul-Fateh (Key to success). Many attempts were made later to win this fort by the Maratha Army, but they were not successful. In 1716, this cave was captured by the British. On 2 November 1817, it was recaptured by the Marathas under the leadership of Bapurao who was general of Bajirao Peshwa. The fort was recaptured by the British on 30 December 1817, by Captain Brooks. The British had the fort till 1862 as an outpost for vigilance on the surrounding valley and the hills all around it</string>
    <string name="prat_hist">The Maratha ruler Chhatrapati Shivaji maharaj commissioned Moropant Trimbak Pingle, his prime minister, to undertake the construction of this fort in order to defend the banks of the Nira and the Koyna rivers, and to defend the Par pass.It was completed in 1656.[3] The Battle of Pratapgad between Shivaji and Afzal Khan was fought below the ramparts of this fort on 10 November 1659. This was the first major test of the fledgling kingdoms army, and set the stage of the establishment of the Maratha empire. Pratapgad continued to be involved in regional politics.</string>
    <string name="ram_hist">Constructed by the Satavahanas, the historical Rajmachi fort complex has an interesting history. Shivaji Maharaj captured this fort in 1657 and also the surrounding forts from the Adilshahi ruler of Bijapur. The Mughal Emperor Aurangzeb again seized the fort from the Marathas in 1704. The very next year, the Marathas regained its control and later in 1713, Shahu Maharaj gave over the Rajmachi fort to Kanhoji Angre. With the downfall of the Marathas in 1818, the British took over the control of the Maratha territories and also the Rajmachi fort.</string>
    <string name="sinh_reach"> Pune Railway Station is the nearest of all the stations to get to the Sinhagad Fort. From here, you can either opt for a private cab service or choose for local bus transport to take you to the fort</string>
    <string name="sinh_reach1"> Your journey from Pune to Sinhagad will be for an hour and 15 minutes. You can opt for a private cab service or Uber cab service or Ola to drive you between the two points.</string>
    <string name="sinh_reach2"> Plenty of bus services are there to drive you between these two points. You need to visit the Pune Bus Stand to find the buses to prefer.</string>
    <string name="shiv_reach">The Pune airport and the Chhatrapati Shivaji International Airport are the nearest airports from Shivneri. Both of them connect to the city Junnar. After reaching Junnar tourists can take a cab or bus to travel to the Shivneri fort.</string>
    <string name="shiv_reach1">At about a distance of 94 km from the Shivneri Fort is the Pune railway station. From this station several private cars are available which help the tourists to reach the Shivneri Fort. Another railway station which connects Junnar at a distance of about 82 km is the Talegaon Dabhade railway station. State buses are available from this station to reach the city and then to the fort.</string>
    <string name="shiv_reach2">The Junnar city is well connected by state buses with many major towns of Maharashtra like Thane, Mumbai, Pune, etc. It takes about half an hour walk to reach the bottom of the fort from the city. One can also hire a car from Junnar and climb up to the fort. The Shivneri Fort can also be reached from Mumbai using the Mumbai Pune Expressway. One can also avail the old Mumbai road from Pune to reach the fort.</string>
    <string name="tik_reach2">Several buses are running between Mumbai or Pune and Tikona Fort. In case you are travelling here in your private car or bike, you may opt for NH48 and then redirect yourself on Pavana Nagar Kamshet Road. This road will drive you to the Tikona Peth. </string>
    <string name="tik_reach3">Lohegaon is the nearest airport to reach Tikona Fort. After that, you can opt either for the local bus or rental cab service to drop you to the Tikona Peth. </string>
    <string name="BY_train">Lonavala railway station is the closest from Tung Fort. Visitors will simply need to take local taxi or bus from Lonavala railway station to Tung Fort.</string>
    <string name="By_bus">Travelers will need to reach Lonavala first. From here they can catch a bus that stops at the nearest bus stop to Tung Fort, GhusalKhamb. And finally, a walk of almost 1.5 km from GhusalKhumb will take you to Tung Fort. </string>
    <string name="by_bike">A Lot of visitors from across the states come to visit Tung Fort by motorbike. Simply reach Lonavala and ride towards Aamby Valley. Approximately an hour from Lonavala is the Tung Village where the fort can be found. </string>
    <string name="shiv_sum">The summer season starts from March and continues till May and the temperature ranges between 22 to 38 degree Celsius. The place experiences maximum heat in the months of April and May.</string>
    <string name="shiv_mansoon">Monsoon sets in from the beginning of June and continues till the month of October. The area receives moderate rainfall and heavy showers are seen in the months of July and August. There are even landslides and floods during monsoons. Thus it is recommended that tourists avoid this place during the rainy season.</string>
    <string name="shiv_winter">Winter starts from November till the month of January. The temperature goes down to 11 degree Celsius during December and January. The months of October and March are best time to plan holiday in this place. The climate is pleasant and tourists can explore the fort comfortably.</string>
</resources>