<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuneFortShivneri">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:fitsSystemWindows="true"
        android:background="?colorPrimary">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            app:collapsedTitleGravity="start"
            app:expandedTitleGravity="bottom"
            app:title="Shivneri Fort"
            app:contentScrim="@color/colorPrimaryDark"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/shivneri"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>



            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_Bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStart="72dp"
                app:layout_collapseMode="pin">



            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>




    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f5f5f5">
            <RelativeLayout
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="300dp"
                    android:id="@+id/org"
                    android:layout_margin="15sp"
                    android:background="#ff3D00">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org"
                    android:layout_toRightOf="@id/org"
                    android:text="@string/hist"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#ff3D00"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:text="@string/shiv_hist"
                    android:layout_toEndOf="@id/org"
                    android:layout_toRightOf="@id/org"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:layout_below="@id/one"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="150dp"
                    android:id="@+id/org1"
                    android:layout_margin="15sp"
                    android:background="#ff3D00">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/org1"
                    android:layout_toRightOf="@id/org1"
                    android:text="What Not to Miss at Shivneri Fort"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="#ff3D00"/>



                <TextView
                    android:id="@+id/text2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="1.Temple of Goddess Shivai"
                    android:textStyle="bold"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/text2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2_1"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="2. Ambarkhana"
                    android:textStyle="bold"
                    android:textColor="#000"/>


                <TextView
                    android:id="@+id/text2_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2_3"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="3. Water Tank"
                    android:textStyle="bold"
                    android:textColor="#000"/>


                <TextView
                    android:id="@+id/text2_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2_5"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="4. Shivkunj"
                    android:textStyle="bold"
                    android:textColor="#000"/>


                <TextView
                    android:id="@+id/text2_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2_7"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="5. Place of birth of Shivaji Maharaj"
                    android:textStyle="bold"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/text2_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2_9"
                    android:layout_toRightOf="@id/org1"
                    android:layout_marginStart="@dimen/_35sdp"
                    android:text="6. Kadelot Kada"
                    android:textStyle="bold"
                    android:textColor="#000"/>






            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:layout_below="@id/two"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="550dp"
                    android:id="@+id/or"
                    android:layout_margin="15sp"
                    android:background="#ff3D00">
                </RelativeLayout>


                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/or"
                    android:layout_toRightOf="@id/or"
                    android:text="@string/reach"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#ff3D00"/>
                <ImageButton
                    android:id="@+id/navbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_navigation"
                    android:layout_toRightOf="@id/text3"
                    android:layout_toEndOf="@id/text3"/>
                <TextView
                    android:id="@+id/text3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/or"
                    android:layout_below="@id/text3"
                    android:text="1.By Air:-"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/text3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text3_1"
                    android:layout_below="@id/text3"
                    android:text="@string/shiv_reach"/>
                <TextView
                    android:id="@+id/text3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/or"
                    android:layout_below="@id/text3_1"
                    android:layout_marginTop="@dimen/_104sdp"
                    android:text="2.By Rail:-"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/text3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text3_3"
                    android:layout_below="@id/text3_2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/shiv_reach1"/>

                <TextView
                    android:id="@+id/text3_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/or"
                    android:layout_below="@id/text3_3"
                    android:layout_marginTop="@dimen/_187sdp"
                    android:text="3.By Road:-"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/text3_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text3_3"
                    android:layout_below="@id/text3_4"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:text="@string/shiv_reach2"/>












            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:layout_below="@id/third"
                android:background="@drawable/curve_background">

                <RelativeLayout
                    android:layout_width="30dp"
                    android:layout_height="550dp"
                    android:id="@+id/or1"
                    android:layout_margin="15sp"
                    android:background="#ff3D00">
                </RelativeLayout>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/or1"
                    android:layout_toRightOf="@id/or1"
                    android:text="Best time to visit"
                    android:textAllCaps="true"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#ff3D00"/>
                <TextView
                    android:id="@+id/text4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4"
                    android:text="1.Summer:-"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/or1"
                    android:layout_toRightOf="@id/or1"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:id="@+id/text4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toRightOf="@id/text4_1"
                    android:text="@string/shiv_sum"/>

                <TextView
                    android:id="@+id/text4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4_1"
                    android:text="2.Mansoon:-"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/or1"
                    android:layout_toRightOf="@id/or1"
                    android:layout_marginTop="@dimen/_102sdp"/>
                <TextView
                    android:id="@+id/text4_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4_2"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toRightOf="@id/text4_3"
                    android:text="@string/shiv_mansoon"/>
                <TextView
                    android:id="@+id/text4_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4_3"
                    android:text="3.Winter:-  "
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_toEndOf="@id/or1"
                    android:layout_toRightOf="@id/or1"
                    android:layout_marginTop="@dimen/_172sdp"/>
                <TextView
                    android:id="@+id/text4_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text4_4"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_toRightOf="@id/text4_5"
                    android:text="@string/shiv_winter"/>






            </RelativeLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>